--- a/src/styles/Player.scss
+++ b/src/styles/Player.scss
@@ -15,10 +15,12 @@
   display: flex;
   input {
     width: 100%;
-    padding: 1rem 0;
+    // padding: 1rem 0;
+    background: transparent;
+    -webkit-appearance:none;
   }
   p {
-    padding: 1rem;
+    padding: 0 1rem;
   }
 }
 
@@ -30,4 +32,34 @@
   svg {
     cursor: pointer;
   }
+}
+
+input[type='range']:focus{
+  outline: none;
+}
+
+input[type='range']::-webkit-slider-thumb{
+  -webkit-appearance: none;
+  height: 1rem;
+  width: 1rem;
+}
+
+.track{
+  background: turquoise;
+  width: 100%;
+  height: 1rem;
+  position: relative;
+  border-radius: 1rem;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.animated-track{
+  background: rgb(213, 226, 225);
+  width: 100%;
+  height: 1rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
 }
