--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -22,3 +22,17 @@
   }
   
 }
+
+
+@media screen and (max-width: 768px) {
+  .Nav {
+    width: 100%;
+    justify-content: space-between;
+    font-size: 80%;
+    padding: 0 1.5rem;
+    margin-bottom: 3rem;
+  }
+  button{
+    z-index: 1;
+  }
+}
