--- a/src/styles/Player.scss
+++ b/src/styles/Player.scss
@@ -17,7 +17,7 @@
     width: 100%;
     // padding: 1rem 0;
     background: transparent;
-    -webkit-appearance:none;
+    -webkit-appearance: none;
   }
   p {
     padding: 0 1rem;
@@ -34,17 +34,17 @@
   }
 }
 
-input[type='range']:focus{
+input[type='range']:focus {
   outline: none;
 }
 
-input[type='range']::-webkit-slider-thumb{
+input[type='range']::-webkit-slider-thumb {
   -webkit-appearance: none;
   height: 1rem;
   width: 1rem;
 }
 
-.track{
+.track {
   background: turquoise;
   width: 100%;
   height: 1rem;
@@ -54,7 +54,7 @@ input[type='range']::-webkit-slider-thumb{
   overflow: hidden;
 }
 
-.animated-track{
+.animated-track {
   background: rgb(213, 226, 225);
   width: 100%;
   height: 1rem;
@@ -62,4 +62,13 @@ input[type='range']::-webkit-slider-thumb{
   top: 0;
   left: 0;
   pointer-events: none;
+}
+
+@media screen and (max-width: 768px) {
+  .player__timer {
+    width: 90%;
+  }
+  .player__icon {
+    width: 60%;
+  }
 }
