--- a/src/styles/Player.scss
+++ b/src/styles/Player.scss
@@ -44,8 +44,13 @@ input[type='range']::-webkit-slider-thumb {
   width: 1rem;
 }
 
+input[type='range']::-moz-slider-thumb {
+  -webkit-appearance: none;
+ background: none;
+ border: none;
+}
+
 .track {
-  background: turquoise;
   width: 100%;
   height: 1rem;
   position: relative;
