--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -7,17 +7,18 @@
   align-items: center;
   font-weight: bold;
   button {
-    background: none;
+    background: rgb(97, 96, 96);
     padding: 0.2rem 1rem;
     display: flex;
     align-items: center;
     border: 2px solid rgba(0, 0, 0, 0.867);
+    color: white;
     font-size: 1.2rem;
     transition: all 0.3s ease;
     &:hover {
-      background:rgb(97, 96, 96);
+      background:none;
       border: 2px solid rgb(0, 0, 0);
-      color: white;
+      color: black;
     }
   }
   
