--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -10,7 +10,7 @@
 }
 
 *::-webkit-scrollbar {
-  width: 0.5rem;
+  width: 5px;
 }
 *::-webkit-scrollbar-thumb {
   background: linear-gradient(45deg, #cc02cc, #00fa9a);
