--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -11,13 +11,13 @@
     padding: 0.2rem 1rem;
     display: flex;
     align-items: center;
-    border: 2px solid rgba(0, 0, 0, 0.867);
+    border: none;
     color: white;
     font-size: 1.2rem;
     transition: all 0.3s ease;
+    border-radius: 0.3rem;
     &:hover {
-      background:none;
-      border: 2px solid rgb(0, 0, 0);
+      background:rgb(230, 230, 230);
       color: black;
     }
   }
